# Embedded-Systems_Car-Controlled-With-Glasses

./: CMakeLists.txt  README.md  buzzer.c  buzzer.h  cgi.h  eye.c  eye.h  gyroscope.c  gyroscope.h  htmldata.c  ir_sensor.c  ir_sensor.h  led.c  led.h  main.c  motor_driver.c  motor_driver.h  sys_arch.c  ultrasonic.c  ultrasonic.h  wifi_module.c  wifi_module.h
html_files/: index.shtml
